[tool.poetry]
name = "userhub-sdk"
version = "0.1.0"
description = "UserHub Python SDK"
authors = ["UserHub <hello@userhub.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "userhub_sdk", from = "src" }]
homepage = "https://userhub.com"
repository = "https://github.com/userhubdev/python-sdk"
keywords = ["api", "sdk", "userhub"]
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.poetry.dependencies]
python = "^3.8"
httpcore = "^1"
anyio = { version = "^4", optional = true }

[tool.poetry.extras]
asyncio = ["anyio"]

[tool.poetry.group.dev.dependencies]
"black" = "^24"
"mypy" = "^1.8"

[tool.poetry.group.test.dependencies]
pytest = "^7.4"
"pytest-asyncio" = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py38']
include = '\.pyi?$'
