[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "userhub-sdk"
dynamic = ["readme", "version"]
description = "UserHub Python SDK"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "UserHub", email = "hello@userhub.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: Trio",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpcore>=1,<2",
]

[project.optional-dependencies]
asyncio = [
    "httpcore[asyncio]",
]
trio = [
    "httpcore[trio]",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest-asyncio>=0.23,<0.24",
    "pytest>=7,<8",
    "userhub-sdk[asyncio]",
    "userhub-sdk[trio]",
]

[project.urls]
Homepage = "https://userhub.com"
Source = "https://github.com/userhubdev/python-sdk"

[tool.hatch.version]
path = "src/userhub_sdk/_internal/constants.py"

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/src/userhub_sdk",
]

[tool.hatch.build.targets.wheel]
packages = ["src/userhub_sdk"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
